Tutorijali/T1/Z3/.gcc.out
/rhome/a/amulalic1/workspace/TP/T1/Z3/main.cpp: In function ‘double toRadian(double)’:
/rhome/a/amulalic1/workspace/TP/T1/Z3/main.cpp:9:24: error: ‘pi’ was not declared in this scope
     return ( degrees * pi ) / 180
                        ^~
/rhome/a/amulalic1/workspace/TP/T1/Z3/main.cpp:10:1: error: expected ‘;’ before ‘}’ token
 }
 ^
/rhome/a/amulalic1/workspace/TP/T1/Z3/main.cpp:8:18: warning: unused variable ‘PI’ [-Wunused-variable]
     const double PI = 3.14159;
                  ^~
/rhome/a/amulalic1/workspace/TP/T1/Z3/main.cpp: In function ‘double toDegree(double)’:
/rhome/a/amulalic1/workspace/TP/T1/Z3/main.cpp:15:1: error: expected primary-expression before ‘}’ token
 }
 ^
/rhome/a/amulalic1/workspace/TP/T1/Z3/main.cpp:15:1: error: expected ‘;’ before ‘}’ token
/rhome/a/amulalic1/workspace/TP/T1/Z3/main.cpp:13:18: warning: unused variable ‘PI’ [-Wunused-variable]
     const double PI = 3.14159;
                  ^~
